Added REST API functionality

--- a/tasks.json
+++ b/tasks.json
@@ -1,15 +1,19 @@
 [
   {
+    "priority": 1,
+    "task": "Get a Kiwi"
+  },
+  {
+    "priority": 1,
+    "task": "Go to LalaLAND"
+  },
+  {
     "priority": 2,
-    "task": "Get an Orange"
+    "task": "Get a Tangerine"
   },
   {
     "priority": 2,
     "task": "Get a Banana"
-  },
-  {
-    "priority": 1,
-    "task": "Get a Kiwi"
   },
   {
     "priority": 3,
